--- a/Tests1.csproj
+++ b/Tests1.csproj
@@ -58,6 +58,7 @@
   <ItemGroup>
     <Compile Include="Assets\Scripts\Gates\GateManager.cs" />
     <Compile Include="Assets\Scripts\Puzzle\GeneratePuzzle.cs" />
+    <Compile Include="Assets\Scripts\Tests\GateManagerTest.cs" />
     <Compile Include="Assets\Scripts\Puzzle\CustomPuzzle.cs" />
     <Compile Include="Assets\Scripts\UI\TakeScreenShot.cs" />
     <Compile Include="Assets\Scripts\UI\MainMenu.cs" />
@@ -68,10 +69,9 @@
     <Compile Include="Assets\Scripts\Puzzle\ResolvePuzzle.cs" />
     <Compile Include="Assets\Scripts\Gates\CustomGateManager.cs" />
     <Compile Include="Assets\Scripts\Classes\LogicGate.cs" />
-    <Compile Include="Assets\Scripts\Tests 1\GateManagerTest.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Assets\Scripts\Tests 1\Tests 1.asmdef" />
+    <None Include="Assets\Scripts\Tests\TestAssembly.asmdef" />
     <None Include="Assets\Scripts\Tests.asmref" />
   </ItemGroup>
   <ItemGroup>
